# pg-backup

./: .dockerignore  .env  .gitignore  Dockerfile  ReadMe.md  backup.sh  backup.tgz  build.sh  docker-compose.prod.yaml  docker-compose.yml  install.sh  poetry_version.sh  project.env  pyproject.toml  restore.sh  run.sh  tox.ini  version_up.sh
.github/workflows/: build-deploy.yml  build.yml  pull-request.yml
app/: __init__.py  config.py  logger.py  main.py
backup/: .gitignore
tasks/: __init__.py  backup.py  config.py  restore.py  scheduler.py
