[tool.poetry]
name = "pg-backup"
version = "0.0.1"
description = "Service for scheduled Postgres DB backup"
authors = ["Simple2B <simple2b.info@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = {extras = ["sync"], version = "^3.10.1"}
invoke = "^2.2.0"
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
